替换框架为bootstrap

--- a/source/widget/courseStudycenter/direct-courseList.html
+++ b/source/widget/courseStudycenter/direct-courseList.html
@@ -8,11 +8,11 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="coursestudycenter.css" rel="stylesheet"></head>
     <body>
-        <div class="courselayout-list">
+        <div class="courselayout-list courseList-wrap">
             <div class="courseList-title">
                 <p>初一数学目标满分班人教版 直播课程大纲</p>
             </div>
