--- a/source/widget/courses/hot-list.html
+++ b/source/widget/courses/hot-list.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="courses.css" rel="stylesheet"></head>
     <body>
@@ -116,8 +116,8 @@
                     </span>
                 </p>
                 <p class="tip-video">
-                    <span>08-11  18:30 </span>
-                    <span>暑假第二轮第一场...</span>
+                    <span class="tip-video-time">08-11  18:30 </span>
+                    <span class="tip-video-con">暑假第二轮第一场...</span>
                 </p>
             </div>
             <div>
