--- a/source/widget/courseStudycenter/courseStudycenter.html
+++ b/source/widget/courseStudycenter/courseStudycenter.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="coursestudycenter.css" rel="stylesheet"></head>
     <body>
@@ -18,7 +18,7 @@
             <li>录播</li>
             <li>已过期课程</li>
         </ul>
-        <div class="courseList-wrap">
+        <div class="courseList-wrap courseList-label">
             <div class="courseList">
                 <div class="study-report">
                     <div class="progress-show"><img src="img/circular.png"></div>
