--- a/source/widget/glory/glory.html
+++ b/source/widget/glory/glory.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="glory.css" rel="stylesheet">
     <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
