Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/homework/homework2.html
+++ b/source/widget/homework/homework2.html
@@ -95,7 +95,9 @@
 									<div class="homework-Feedback-cont">
 										<div class="homework-Feedback-header left">
 											<img src="img/emote.png" class="homework-likeEmote">
-											<div class="homework-dialog">奖励你 <em>15</em> 个金币！</div>
+											<div class="homework-dialog">
+												<p class="homework-tipsInfo">完成作业奖励<em>15</em>金币和<em>1500</em>学力。辅导老师额外奖励你<em>150</em>个金币！</p>
+											</div>
 											<div class="homework-scoreArea">
 												<span class="homework-score" score = "159"></span>
 												<span class="homework-scoreLine"></span>
