--- a/source/widget/courseStudycenter/courseStudycenter.html
+++ b/source/widget/courseStudycenter/courseStudycenter.html
@@ -87,7 +87,7 @@
                 <label class="label-study label-continun">续报</label>
             </div>
         </div>
-        <div class="courseList-wrap">
+        <div class="courseList-wrap courseList-label">
             <div class="courseList">
                 <div class="study-report">
                     <div class="progress-show"><img src="img/circular.png"></div>
@@ -155,7 +155,7 @@
                 <label class="label-study label-continun">续报</label>
             </div>
         </div>
-        <div class="courseList-wrap">
+        <div class="courseList-wrap courseList-label">
             <div class="courseList">
                 <div class="study-report">
                     <div class="progress-show"><img src="img/circular.png"></div>
@@ -222,7 +222,7 @@
                 <label class="label-study label-continun">续报</label>
             </div>
         </div>
-        <div class="courseList-wrap">
+        <div class="courseList-wrap courseList-label">
             <div class="courseList">
                 <div class="study-report">
                     <div class="progress-show"><img src="img/circular.png"></div>
