--- a/source/widget/homework/homework5.html
+++ b/source/widget/homework/homework5.html
@@ -8,7 +8,10 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css"> -->
+    <!-- 这是CSS库文件 -->
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="homework.css" rel="stylesheet">
   </head>
@@ -16,20 +19,20 @@
 	<div class="homework-wrapper">
 		<div class="homework-container">
 			<!--交作业右侧开始-->
-			<div class="homework-right-all right"></div>
+			<div class="homework-right-all pull-right"></div>
 			<!--交作业右侧结束-->
 			<!--交作业左侧开始-->
 			<div class="homework-left-all">
 				<div class="homework-header">
 					<h2>
-						<span class="homework-name left">第三次作业 三角函数</span>
-						<span class="homework-status homework-status-green left">已批改</span>
+						<span class="homework-name pull-left">第三次作业 三角函数</span>
+						<span class="homework-status homework-status-green pull-left">已批改</span>
 					</h2>
 				</div>
 				<!--第一次批改作业开始-->
 				<div class="homework-image-box" id="home_Image1">
 					<div class="homework-image-area">
-						<div class="homework-Thumbnails-box left">
+						<div class="homework-Thumbnails-box pull-left">
 							<div class="homework-page-btn"><i class="homework-prev_btn homework-prev-active"></i></div>
 							<div class="homework-Thumbnails-img-list" id="Thumbnails">
 								<ul>
@@ -70,7 +73,7 @@
 							<div class="homework-page-btn"><i class="homework-next-btn homework-next-active"></i></div>
 						</div>
 						<div class="homework-bigImg-box">
-							<div class="homework-rightMeun right">
+							<div class="homework-rightMeun pull-right">
 								<ul>
 									<li><i class="homework-audio"></i></li>
 									<li><i class="homework-leftRotate-btn"></i></li>
@@ -92,7 +95,7 @@
 								<!--作业反馈开始-->
 								<div class="homework-Feedback" style="display:block">
 									<div class="homework-Feedback-cont">
-										<div class="homework-Feedback-header left">
+										<div class="homework-Feedback-header pull-left">
 											<img src="img/emote.png" class="homework-likeEmote">
 											<div class="homework-dialog">
 												<p class="homework-tipsInfo">完成作业奖励<em>15</em>金币和<em>1500</em>学力。辅导老师额外奖励你<em>150</em>个金币！</p>
@@ -105,9 +108,9 @@
 										<p class="homework-Feedback-describe">
 												32分，满分是50，还是有点偏低。错了一道逻辑推理的题目，和一道零点分段法的题目，这部分要好好再看看课程哦，要学会对题目归纳总结。但是其他题目做得都不错，看得出来暑假还是用心预习了的，字也写得很漂亮，很棒！但是老师还是要小小提醒你一下，看看老师帮你写了多少个解啊，咱们做题的时候一定要规范作答，上了初中，这一点非常重要哦~加油，下一次老师期待你提交上来完美的试卷！
 										</p>
-										<div class="homework-Feedback-video left">
+										<div class="homework-Feedback-video pull-left">
 											<h3>老师推荐你观看以下视频</h3>
-											<div class="homework-videoInfo left">
+											<div class="homework-videoInfo pull-left">
 												<ul>
 													<li><i></i><a href="">三角函数的概念</a></li>
 													<li><i></i><a href="">三角函数的解题技巧</a></li>
@@ -122,9 +125,9 @@
 					</div>
 					<!--评论区域开始-->
 					<div class="homework-comment-box">
-						<div class="homework-star left">
-							<span class="left">评价作业批改</span>
-							<div class="homework-star-area left" id="homeworkstarArea1">
+						<div class="homework-star pull-left">
+							<span class="pull-left">评价作业批改</span>
+							<div class="homework-star-area pull-left" id="homeworkstarArea1">
 								<ul class="left">
 									<li class="on"></li>
 									<li class="on"></li>
@@ -137,7 +140,7 @@
 						</div>
 						<textarea class="homework-comment" placeholder="请对老师的作业批改做出评价，谢谢！"></textarea>
 						<div class="homework-submit-box">
-							<button class="homework-submit-btn right">提交</button>
+							<button class="homework-submit-btn pull-right">提交</button>
 						</div>
 					</div>
 					<!--评论区域结束-->
@@ -146,7 +149,7 @@
 				<!--第二次批改作业开始-->
 				<div class="homework-image-box" id="home_Image2">
 					<div class="homework-image-area">
-						<div class="homework-Thumbnails-box left">
+						<div class="homework-Thumbnails-box pull-left">
 							<div class="homework-page-btn"><i class="homework-prev_btn homework-prev-active"></i></div>
 							<div class="homework-Thumbnails-img-list" id="Thumbnails">
 								<ul>
@@ -187,7 +190,7 @@
 							<div class="homework-page-btn"><i class="homework-next-btn homework-next-active"></i></div>
 						</div>
 						<div class="homework-bigImg-box">
-							<div class="homework-rightMeun right">
+							<div class="homework-rightMeun pull-right">
 								<ul>
 									<li><i class="homework-audio"></i></li>
 									<li><i class="homework-leftRotate-btn"></i></li>
@@ -209,7 +212,7 @@
 								<!--作业反馈开始-->
 								<div class="homework-Feedback" style="display:block">
 									<div class="homework-Feedback-cont">
-										<div class="homework-Feedback-header left">
+										<div class="homework-Feedback-header pull-left">
 											<img src="img/emote.png" class="homework-likeEmote">
 											<div class="homework-dialog">奖励你 <em>15</em> 个金币！</div>
 											<div class="homework-scoreArea">
@@ -220,9 +223,9 @@
 										<p class="homework-Feedback-describe">
 												32分，满分是50，还是有点偏低。错了一道逻辑推理的题目，和一道零点分段法的题目，这部分要好好再看看课程哦，要学会对题目归纳总结。但是其他题目做得都不错，看得出来暑假还是用心预习了的，字也写得很漂亮，很棒！但是老师还是要小小提醒你一下，看看老师帮你写了多少个解啊，咱们做题的时候一定要规范作答，上了初中，这一点非常重要哦~加油，下一次老师期待你提交上来完美的试卷！
 										</p>
-										<div class="homework-Feedback-video left">
+										<div class="homework-Feedback-video pull-left">
 											<h3>老师推荐你观看以下视频</h3>
-											<div class="homework-videoInfo left">
+											<div class="homework-videoInfo pull-left">
 												<ul>
 													<li><i></i><a href="">三角函数的概念</a></li>
 													<li><i></i><a href="">三角函数的解题技巧</a></li>
@@ -237,9 +240,9 @@
 					</div>
 					<!--评论区域开始-->
 					<div class="homework-comment-box">
-						<div class="homework-star left">
-							<span class="left">评价作业批改</span>
-							<div class="homework-star-area left" id="homeworkstarArea2">
+						<div class="homework-star pull-left">
+							<span class="pull-left">评价作业批改</span>
+							<div class="homework-star-area pull-left" id="homeworkstarArea2">
 								<ul class="left">
 									<li class="on"></li>
 									<li class="on"></li>
@@ -252,7 +255,7 @@
 						</div>
 						<textarea class="homework-comment" placeholder="请对老师的作业批改做出评价，谢谢！"></textarea>
 						<div class="homework-submit-box">
-							<button class="homework-submit-btn right">提交</button>
+							<button class="homework-submit-btn pull-right">提交</button>
 						</div>
 					</div>
 					<!--评论区域结束-->
