--- a/source/widget/gold/gold.html
+++ b/source/widget/gold/gold.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.css">
     <!-- 这是当前模块样式文件 -->
     <link href="gold.css" rel="stylesheet">
     <link href="ui.calendar.css" rel="stylesheet">
@@ -16,9 +16,9 @@
 <body>
 <!-- 金币商城头部 -->
 <ul class="gold-detail-title">
-    <li class="gold-detail-title-on" data-target=".gold-detail-container">金币明细</li>
-    <li data-target=".gold-store-container">金币商城</li>
-    <li data-target=".gold-exchange-container">我兑换的</li>
+    <li class="gold-detail-title-on"><a href="#" data-target=".gold-detail-container">金币明细</a></li>
+    <li><a href="#" data-target=".gold-store-container">金币商城</a></li>
+    <li><a href="#" data-target=".gold-exchange-container">我兑换的</a></li>
 </ul>
 <!-- 金币明细 -->
 <div class="gold-detail-container gold-detail-block-change" style="display: block">
