--- a/source/widget/courseInfor/live-back-course.html
+++ b/source/widget/courseInfor/live-back-course.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="ui-course-infor.css" rel="stylesheet"></head>
 <body>
@@ -57,10 +58,10 @@
 			</div>
 			<div class="course-button-list">
 			<span class="f-left">
-				<button class="medium button_shop-cart">加入购物车</button>
+				<button class="btn btn-info button_shop-cart">加入购物车</button>
 			</span>
 			<span class="f-left">
-				<button class="medium alert button_apply">立即报名</button>
+				<button class="btn btn-danger button_apply">立即报名</button>
 			</span>
 				<span class="collect f-left">
 					<a id="collectId" onclick="collect(11323)" href="javascript:void(0);">收藏课程</a>
