--- a/source/widget/studyCourse/study-course.html
+++ b/source/widget/studyCourse/study-course.html
@@ -8,7 +8,8 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<!-- 这是CSS库文件 -->
-	<link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+	 <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<!-- 这是当前模块样式文件 -->
 	<link href="study-course.css" rel="stylesheet"></head>
 <body id="stude-course-container">
