--- a/source/widget/courses/courses.html
+++ b/source/widget/courses/courses.html
@@ -89,7 +89,7 @@
                 <p class="tip-for">适用于：想要培养化学学习兴趣的初三学员</p>
                 <p class="avatar-name"><a target="_blank"  href="###" class="ui-username">赵紫涵</a></p>
                 <p class="amount-show">
-                    <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-will"></em>立即听课</a>
+                    <a href="##" class="btn btn-default"><em class="button-icon icon-will"></em>立即听课</a>
                 </p>
             </div>
             <div class="course-num">
@@ -127,7 +127,7 @@
                     <span>已购买：<strong>230</strong></span>
                 </p>
                 <p class="amount-show amount-test">
-                    <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-test"></em>视听直播</a>
+                    <a href="##" class="btn btn-default"><em class="button-icon icon-test"></em>视听直播</a>
                     <strong class="test-price"><span>￥</span>13.44</strong>
                 </p>
             </div>
@@ -167,7 +167,7 @@
                     <span>已购买：<strong>230</strong></span>
                 </p>
                 <p class="amount-show amount-test">
-                    <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-record"></em>视听点播</a>
+                    <a href="##" class="btn btn-default"><em class="button-icon icon-record"></em>视听点播</a>
                     <strong class="test-price"><span>￥</span>13.44</strong>
                 </p>
             </div>
@@ -197,7 +197,7 @@
                     <span>已购买：<strong>230</strong></span>
                 </p>
                 <p class="amount-show amount-test">
-                    <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-test"></em>视听直播</a>
+                    <a href="##" class="btn btn-default"><em class="button-icon icon-test"></em>视听直播</a>
                     <strong class="test-price"><span>￥</span>13.44</strong>
                 </p>
             </div>
