--- a/source/widget/UM.all.order/index.html
+++ b/source/widget/UM.all.order/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="all.order.css" rel="stylesheet"></head>
 <body>
@@ -57,7 +58,7 @@
                     <li class="ao-third ao-li">待支付</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="alert">立即支付</button>
+                            <button class="btn btn-danger">立即支付</button>
                             <span>
                                 <a href="#">查看详情</a>
                                 <a href="#">取消订单</a>
@@ -86,7 +87,7 @@
                     <li class="ao-third ao-li">已完成</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button>查看详情</button>
+                            <button class="btn btn-info">查看详情</button>
                         </div>
                     </li>
                 </ul>
@@ -111,7 +112,7 @@
                     <li class="ao-third ao-li">已取消</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="alert">重新购买</button>
+                            <button class="btn btn-danger">重新购买</button>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
@@ -139,7 +140,7 @@
                     <li class="ao-third ao-li">待审核</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button>查看详情</button>
+                            <button class="btn btn-info">查看详情</button>
                             <span>
                                 <a href="#">取消订单</a>
                             </span>
@@ -167,7 +168,7 @@
                     <li class="ao-third ao-li">待收货</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="alert">确认收货</button>
+                            <button class="btn btn-danger">确认收货</button>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
@@ -195,7 +196,7 @@
                     <li class="ao-third ao-li">待发货</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button>查看详情</button>
+                            <button class="btn btn-info">查看详情</button>
                         </div>
                     </li>
                 </ul>
@@ -220,7 +221,7 @@
                     <li class="ao-third ao-li">审核未通过</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button>查看详情</button>
+                            <button class="btn btn-info">查看详情</button>
                         </div>
                     </li>
                 </ul>
@@ -228,7 +229,7 @@
         </div>
     </div>
     <!-- 这是jquery库文件 -->
-    <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
     <script type="text/javascript" src="all.order.js"></script>
 </body>
