--- a/source/widget/UM.certificate/index.html
+++ b/source/widget/UM.certificate/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="certificate.css" rel="stylesheet"></head>
 <body>
@@ -30,7 +31,7 @@
             </div>
             <span class="serialPass-warning error"></span>
 
-            <button class="btn_blue">激活</button>
+            <button class="btn-certificate btn btn-info">激活</button>
         </div>
     </div>
     <div class="prompt-box">
