--- a/source/widget/UM.money/index.html
+++ b/source/widget/UM.money/index.html
@@ -8,12 +8,13 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">    
     <!-- 这是当前模块样式文件 -->
     <link href="money.css" rel="stylesheet"></head>
 <body>
     <div class="gift-card-record">
-         <button class="gcr-top-up">去激活</button>
+         <button class="gcr-top-up btn btn-info">去激活</button>
          <table class="table gcr-table">
             <thead>
                 <tr>
@@ -79,7 +80,7 @@
           </div>
     </div>
     <!-- 这是jquery库文件 -->
-    <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
     <script type="text/javascript" src="money.js"></script>
 </body>
