--- a/source/widget/UM.password/index.html
+++ b/source/widget/UM.password/index.html
@@ -8,34 +8,41 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">    
     <!-- 这是当前模块样式文件 -->
     <link href="password.css" rel="stylesheet">   
 </head>
 <body>
     <div class="form-password" action="" method="POST">
-        <p>当前密码：</p>
-        <input id="old-password" name="old-password" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
-        <label for="password" class="oldpass-tip">请输入当前网站密码</label>
-        <span class="oldpass-warning error"></span>
-
-        <p>新密码：</p>
-        <input id="new-password" name="new-password" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
-        <label for="password" class="newpass-tip">请设置密码</label>
-        <div class="pass-strength">
-            <span class="newpass-warning error"></span>
-            <span class="pass-strong">
-                <i class="security">安全强度</i>
-                <strong class="strong1"></strong>   
-            </span>
+        <div class="curPwd-box">
+            <p>当前密码：</p>
+            <input id="curPwd" name="curPwd" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
+            <label for="curPwd" class="curPwd-tip">请输入当前网站密码</label>
+            <span class="curPwd-warning error"></span>
         </div>
 
-        <p>确认密码：</p>
-        <input id="repassword" name="repassword" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
-        <label for="password" class="repass-tip">请再次输入密码</label>
-        <span class="repass-warning error"></span>
+        <div class="newPwd-box">
+            <p>新密码：</p>
+            <input id="newPwd" name="newPwd" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
+            <label for="newPwd" class="newPwd-tip">请设置密码</label>
+            <div class="pass-strength">
+                <span class="newPwd-warning error"></span>
+                <span class="pass-strong">
+                    <i class="security">安全强度</i>
+                    <strong class="strong1"></strong>   
+                </span>
+            </div>
+        </div>
 
-        <button id="form_submit" name="submit" id='register' type="submit">保存</button>     
+        <div class="confirmPwd-box">
+            <p>确认密码：</p>
+            <input id="confirmPwd" name="confirmPwd" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
+            <label for="confirmPwd" class="confirmPwd-tip">请再次输入密码</label>
+            <span class="confirmPwd-warning error"></span>
+        </div>
+
+        <button id="form_submit" class="btn btn-info" name="submit" type="submit">保存</button>     
     </div>
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
