--- a/source/widget/UM.card.activation/index.html
+++ b/source/widget/UM.card.activation/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="card.activation.css" rel="stylesheet"></head>
 <body>
@@ -22,7 +23,7 @@
             <span class="cardNo-warning error"></span>
             <div><label for="">密码：</label><input class="cardPass" type="password"></div>
             <span class="cardPass-warning error"></span>
-            <button class="btn_blue">激活</button><a href="">查看激活记录</a>
+            <button class="btn-active btn btn-info">激活</button><a href="">查看激活记录</a>
         </div>
     </div>
     <div class="prompt-box">
