--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">    
     <!-- 这是当前模块样式文件 -->
     <link href="head.photo.css" rel="stylesheet"></head>
 <body>
@@ -57,31 +58,36 @@
                     <img src="img/head.photo.png" alt="头像">
                     <img src="img/head.photo.png" alt="头像">
                 </div>
-                <button class="btn_blue">保存</button>
+                <button class="btn btn-info">保存</button>
             </div>
             <div class="hp-local">
                 <div class="hl-box">
-                    <button class="btn_loadFile">+ 上传头像</button>
-                    <input id="loadFile" type="file" value="上传头像" />
+                    <div id="preview" style="display:inline-block;">
+                        <img id="imghead" src=''>
+                    </div>
+                    <div class="btn_up">
+                        <button class="btn_loadFile btn btn-info">+ 上传头像</button>
+                    </div>
+                    <input id="loadFile" type="file" name="img" class="input_file" onchange="getFullPath(this);Javascript:validate_img(this);" />
                     <em>每次上传消耗3000金币</em>
                     <span>仅支持JPG、GIF、PNG且文件小于2M，照片尺寸请大于200×200</span>
                 </div>
-                <button class="btn_blue">保存</button>
+                <button id="btn_submit" class="btn btn-info" onclick="headsSave();">保存</button>
             </div>
         </div>
         <div class="hp-box-right">
             <h4>预览</h4>
             <p>您选定的头像会生成3种尺寸，请注意大小尺寸的头像是否清晰</p>
-            <div class="hp-small">
-                <img src="img/head.photo.png" alt="">
+            <div id="hp-small">
+                <img src="img/head.photo.png" id="img-small">
                 <span>40*40像素</span>
             </div>
-            <div class="hp-middle">
-                <img src="img/head.photo.png" alt="">
+            <div id="hp-middle">
+                <img src="img/head.photo.png" id="img-middle">
                 <span>60*60像素</span>
             </div>
-            <div class="hp-big">
-                <img src="img/head.photo.png" alt="">
+            <div id="hp-big">
+                <img src="img/head.photo.png" id="img-big">
                 <span>100*100像素</span>
             </div>
         </div>
@@ -90,5 +96,6 @@
     <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
     <script type="text/javascript" src="head.photo.js"></script>
+
 </body>
 </html>
