--- a/source/widget/UM.mobile.phone/index.html
+++ b/source/widget/UM.mobile.phone/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">    
     <!-- 这是当前模块样式文件 -->
     <link href="mobile.phone.css" rel="stylesheet">
 </head>
@@ -36,7 +37,7 @@
                 <p>短信验证码：</p>
                 <input id="phonecode" name="code" type="text"/>
                 <label for="phonecode" class="phonecode-tip">请输入短信验证码</label>
-                <button class="vcode" id="vcode">获取短信验证码</button>
+                <button class="vcode btn btn-info" id="vcode">获取短信验证码</button>
             </div>
             <span id="tips-phonecode" class="tips error"></span>
         </div>
@@ -44,14 +45,14 @@
         <div>
             <div class="pass-eye">
                 <p>当前密码：</p>
-                <input id="password" name="password" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
-                <label for="password" class="pass-tip">请输入当前网站密码</label>
+                <input id="curPwd" name="password" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
+                <label for="curPwd" class="pass-tip">请输入当前网站密码</label>
             </div>
             <span class="pass-warning error"></span>
         </div>
 
         <div>
-            <button id="form_submit" class="login_btn btn_submit" name="submit" type="submit">保存</button>
+            <button id="form_submit" class="btn btn-info" name="submit" type="submit">保存</button>
         </div>      
     </div>
     <!-- 这是jquery库文件 -->
@@ -62,7 +63,7 @@
         /* 火狐浏览器刷新之后的界面不同的处理 */
         !function(){
             $('#phone').val('');
-            $('#password').val('');
+            $('#curPwd').val('');
             $('#grade').val('')
             $('#verificationCode').val('');
             $('#phonecode').val('');
