--- a/source/widget/UM.third.bind/index.html
+++ b/source/widget/UM.third.bind/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="third.bind.css" rel="stylesheet"></head>
 <body>
@@ -18,12 +19,12 @@
             <li class="app-qq unbounded">
                 <h5>腾讯QQ</h5>
                 <span>未绑定</span>
-                <button class="btn-blue">立即绑定</button>
+                <button class="btn btn-info">立即绑定</button>
             </li>
             <li class="app-weixin unbounded">
                 <h5>腾讯微信</h5>
                 <span>未绑定</span>
-                <button class="btn-blue">立即绑定</button>
+                <button class="btn btn-info">立即绑定</button>
             </li>
             <li class="app-weibo bounded">
                 <h5>新浪微博</h5>
@@ -40,7 +41,7 @@
         </ul>
     </div>
     <!-- 这是jquery库文件 -->
-    <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
     <script type="text/javascript" src="third.bind.js"></script>
 </body>
