--- a/source/widget/notice/notice.no.message.html
+++ b/source/widget/notice/notice.no.message.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
     <link href="notice.css" rel="stylesheet"></head>
 <body style="background-color:#f1f2f6;">
@@ -16,10 +17,8 @@
         <div id="notice-l">
             <ul class="notice-nav">
                 <li class="notice-hover">网校通知</li>
-                <li>教师留言</li>
-                <li>直播提醒</li>
-                <li>考试提醒</li>
-                <li>资料提醒</li>
+                <li>教师消息</li>
+                <li>系统消息</li>
             </ul>
         </div>
         <div id="notice-r">
