--- a/source/widget/errorQuestion/error_question.html
+++ b/source/widget/errorQuestion/error_question.html
@@ -7,13 +7,13 @@
     <title>错题本-欢迎来到学而思网校</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="css/normalize.css" type="text/css" rel="stylesheet" />
-    <link href="css/foundation.min.css" type="text/css" rel="stylesheet" />
-    <link href="css/error_question.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript" src="error_question.js"></script>
+    <link href="normalize.css" type="text/css" rel="stylesheet" />
+    <link href="foundation.min.css" type="text/css" rel="stylesheet" />
+    <link href="error_question.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" src="js/error_question.js"></script>
     <script src="http://cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
     <!--[if lt IE 9]>
-        <link href="css/ie_project.css" type="text/css" rel="stylesheet"/>
+    <link href="ie_project.css" type="text/css" rel="stylesheet"/>
     <![endif]-->
 </head>
 <body>
