--- a/source/data/Dynamic/coment.html
+++ b/source/data/Dynamic/coment.html
@@ -1,22 +1,22 @@
 <div class="fresh-comment-list">
-    <div class="fresh-avatar fresh-avatar-mini left">
-        <a href="###" target="_blank"><img src="img/fresh_avatar.png"></a>
+    <div class="fresh-avatar fresh-avatar-mini pull-left">
+        <a href="###" target="_blank"><img src="/static/pic/Dynamic/fresh_avatar.png"></a>
         <!-- <span><img src="img/fresh_avatar.png"></span> -->
     </div>
     <div class="fresh-detail" data-id="57368152">
         <div class="fresh-text">
             <div class="fresh-uesr" data-user="易烊千楠">
-                <!--  <span class="left">易烊千楠qq</span><span class="left">：</span> -->
-                <a href="###" target="_blank" class="left">易烊千楠</a>
-                <i class="fresh-v-red left"></i>
-                <span class="left">：</span>
+                <!--  <span class="pull-left">易烊千楠qq</span><span class="pull-left">：</span> -->
+                <a href="###" target="_blank" class="pull-left">易烊千楠</a>
+                <i class="fresh-v fresh-v-red pull-left"></i>
+                <span class="pull-left">：</span>
             </div>
             <div class="fresh-info"><em class="fresh-font-blue">@杜春雨</em>亲爱的孩子们，昨天的小新电台&mdash;&mdash;《五月的草场》有没有收听呢？那么今天出一个小题目&mdash;&mdash;草原上的人用什么办法消灭蝗虫呢？随机奖励正确的<img alt="" src="http://img04.xesimg.com/icon/emoji/em_4.png" title="挤眼">五个答案~~加油哦！<img alt="" src="http://img04.xesimg.com/icon/emoji/em_46.png" title="出拳">收听地址： <a target="_blank" href="http://t.xueersi.com/7boW01nx">http://t.xueersi.com/7boW01nx</a>
             </div>
-        </div>
+        </div>      
         <div class="fresh-barinfo">
-            <span class="fresh-time left">11小时前</span>
-            <div class="fresh-right right">
+            <span class="fresh-time pull-left">11小时前</span>
+            <div class="fresh-right pull-right">
                 <span class="fresh-right-btn">
                 <span class="fresh-addGold">
                    <i class="fresh-addGold-icon"></i>
