--- a/source/widget/personalCenter/centerHeader.html
+++ b/source/widget/personalCenter/centerHeader.html
@@ -7,9 +7,9 @@
     <title>错题本-欢迎来到学而思网校</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="css/normalize.css" type="text/css" rel="stylesheet" />
-    <link href="css/foundation.min.css" type="text/css" rel="stylesheet" />
-    <link href="css/personalCenter.css" type="text/css" rel="stylesheet"/>
+    <link href="normalize.css" type="text/css" rel="stylesheet" />
+    <link href="foundation.min.css" type="text/css" rel="stylesheet" />
+    <link href="personalCenter.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="centerHeader">
@@ -44,13 +44,13 @@
             <div class="centerHeader-intro-stu">圣诞老人 <img src="img/sex-man.png" alt="" class="centerHeader-stud-sex"/></div>
             <!--名称栏end-->
 
-            <!--<div class="centerHeader-selfintro">专注于初一,初二,初三教学</div>-->
+            <div class="centerHeader-selfintro">专注于初一，初二，初三教学</div>
 
-            <div class="centerHeader-selfintro">
-                <span class="centerHeader-selfintro-location">湖南省长沙市</span>
-                <span class="centerHeader-selfintro-school">一中</span>
-                <span class="centerHeader-selfintro-grade">初二</span>
-            </div>
+            <!--<div class="centerHeader-selfintro">-->
+                <!--<span class="centerHeader-selfintro-location">湖南省长沙市</span>-->
+                <!--<span class="centerHeader-selfintro-school">一中</span>-->
+                <!--<span class="centerHeader-selfintro-grade">初二</span>-->
+            <!--</div>-->
 
             <!--关注start-->
             <!--1、未关注时-->
