--- a/source/widget/courseInfor/live-back-course.html
+++ b/source/widget/courseInfor/live-back-course.html
@@ -16,7 +16,7 @@
 	<div class="ui-course-infor-wrap">
 		<div class="course-left-player f-left">
 			<div class="video-player">
-				<img src="img/pic/lb-xiangqing_03.png" height="400" width="590" alt="">
+				<img src="pic/lb-xiangqing_03.png" height="400" width="590" alt="">
 			</div>
 		</div>
 		<div class="course-center-list course-video-back f-left">
