--- a/source/widget/courseInfor/live_coures.html
+++ b/source/widget/courseInfor/live_coures.html
@@ -18,7 +18,7 @@
 			<div class="course-left-player f-left">
 				<div class="video-images-player">
 					<a href="#" target="_blank">
-						<img src="img/pic/xiangqing_03.jpg" height="340" width="340" alt=""></a>
+						<img src="pic/xiangqing_03.jpg" height="340" width="340" alt=""></a>
 				</div>
 			</div>
 			<div class="course-center-list f-left">
