--- a/source/widget/courseInfor/open-course.html
+++ b/source/widget/courseInfor/open-course.html
@@ -17,7 +17,7 @@
 	<div class="ui-course-infor-wrap">
 		<div class="course-left-player f-left">
 			<div class="video-player">
-				<img src="img/pic/lb-xiangqing_03.png" height="400" width="590" alt=""></div>
+				<img src="pic/lb-xiangqing_03.png" height="400" width="590" alt=""></div>
 		</div>
 		<div class="course-center-list course-video-back f-left">
 			<h2 class="coures-name-title">人教版四升五年级上下全册数学满分班</h2>
