个人中心--听课页
组合个人中心中的听课页

--- a/source/widget/studyCourse/study-course.html
+++ b/source/widget/studyCourse/study-course.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<!-- 这是当前模块样式文件 -->
 	<link href="study-course.css" rel="stylesheet"></head>
-<body id="stude-course-container">
+<body style="background: #f9f9f9;">
 	<h2 class="content-study-title ui-margin">
 		数学选修1-1同步强化班 <strong>(直播强化班)</strong>
 	</h2>
