--- a/source/widget/UM.Basic.information/bi-perfect.html
+++ b/source/widget/UM.Basic.information/bi-perfect.html
@@ -63,7 +63,7 @@
                 <input class="school" type="text">
                 <span class="school-warning error"></span>
             </p>
-            <button id="form_submit" class="btn_submit" name="submit" type="submit">保存</button>
+            <button class="btn-submit btn btn-info" name="submit" type="submit">保存</button>
         </div>
         <div class="bi-right">
             <span>真实姓名、性别、所在地、年级等基本资料如需修改请拨打客服电话：<em>400-800-2211</em></span>
