--- a/source/widget/UM.Basic.information/index.html
+++ b/source/widget/UM.Basic.information/index.html
@@ -10,9 +10,6 @@
     <!-- 这是CSS库文件 -->
     <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="/lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/css/default.css">    
     <!-- 这是当前模块样式文件 -->
     <link href="basic-information.css" rel="stylesheet">
 </head>
@@ -25,8 +22,9 @@
             </p>
             <p>
                 <label for="">昵称：</label>
-                <input class="nickname" type="text">
-                <span class="user-name-warning error"></span>
+                <input class="nickname" type="text" maxlength="18">
+                <span class="nickname-warning error"></span>
+                <span class="prompt-empty"></span>
             </p>
             <p>
                 <label for="">真实姓名：</label>
@@ -64,7 +62,7 @@
             </p>
             <p>
                 <label for="">学校：</label>
-                <input class="school" type="text">
+                <input class="school" type="text" maxlength="50">
                 <span class="school-warning error"></span>
             </p>
             <button class="btn-submit btn btn-info" name="submit" type="submit">保存</button>
