调整js文件位置

--- a/source/widget/errorQuestion/chooseGrade.html
+++ b/source/widget/errorQuestion/chooseGrade.html
@@ -78,5 +78,5 @@
 
 </body>
 <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/error_question.js" ></script>
+<script type="text/javascript" src="error_question.js" ></script>
 </html>
