--- a/source/widget/errorQuestion/error_question.html
+++ b/source/widget/errorQuestion/error_question.html
@@ -10,7 +10,7 @@
     <link href="normalize.css" type="text/css" rel="stylesheet" />
     <link href="foundation.min.css" type="text/css" rel="stylesheet" />
     <link href="error_question.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript" src="js/error_question.js"></script>
+    <script type="text/javascript" src="error_question.js"></script>
     <script src="http://cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
     <!--[if lt IE 9]>
     <link href="ie_project.css" type="text/css" rel="stylesheet"/>
