--- a/source/widget/errorQuestion/showError.html
+++ b/source/widget/errorQuestion/showError.html
@@ -10,7 +10,7 @@
     <link href="foundation.min.css" type="text/css" rel="stylesheet" />
     <link href="error_question.css" type="text/css" rel="stylesheet"/>
     <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/error_question.js"></script>
+    <script type="text/javascript" src="error_question.js"></script>
     <!--[if lt IE 9]>
     <link href="ie_project.css" type="text/css" rel="stylesheet"/>
     <![endif]-->
