学习中心弹窗

--- a/source/widget/UserHome.courses/bombBox.html
+++ b/source/widget/UserHome.courses/bombBox.html
@@ -12,7 +12,7 @@
     <!-- 这是当前模块样式文件 -->
     <link href="coursestudycenter.css" rel="stylesheet"></head>
     <body>
-        <table class="table">
+        <table class="table examTable">
             <thead>
                 <tr>
                     <th width="35%">考试名称</th>
