--- a/source/data/courses/material.html
+++ b/source/data/courses/material.html
@@ -6,7 +6,7 @@
         <li>资料</li>
         <a href="##" class="cant-load">讲义/资料无法下载？</a>
     </ul>
-    <div class="lecture-wrap">
+    <div class="lecture-wrap material-content">
         <table class="table material">
             <tbody>
                 <tr>
@@ -36,7 +36,7 @@
             </tbody>
         </table>
     </div>
-    <div class="material-wrap hide">
+    <div class="material-wrap hide material-content">
         <table class="table material">
             <tbody>
                 <tr>
